# krill

./: .gitignore  README.md  beat-stock.txt  data-model-example.txt  explore.js  grammar.txt  main.js  package-lock.json  package.json  render.js  test.js  todo-examples.txt
embedded/: CMakeLists.txt  embedded.code-workspace  main.cpp  makefile  prepare_build.sh  readme.md  test.json
embedded/cycle/: Cycle.cpp  Cycle.hpp
embedded/parser/: Context.cpp  Context.hpp  Helpers.hpp  MiniNotation.cpp  MiniNotation.hpp  Parser.cpp  Parser.hpp  Rules.cpp  Rules.hpp  StringStream.cpp  StringStream.hpp  Types.hpp  XmlBuilder.cpp  XmlBuilder.hpp
embedded/renderer/: RenderNode.hpp  RenderTreeBuilder.cpp  RenderTreeBuilder.hpp  RenderTreePlayer.hpp
embedded/tests/: CMakeLists.txt  test.cpp  testUtils.cpp  testUtils.hpp  test_cases.json  tst_cycle.cpp  tst_parser.cpp  tst_renderNode.cpp  tst_renderTree.cpp  tst_run_cases.cpp  tst_stringStream.cpp
embedded/utils/: jsonUtils.hpp
js/: application.js  command-evaluator.js  design.txt  evaluator.js  input-evaluator.js  pattern-event.js  pattern.js  reducer.js  rendering-tree.js  sequence.js  type.js
js/music/: conversion.js  harmony.js
js/operators/: op-add.js  op-bjorklund.js  op-pattern.js  op-scale.js  op-sequence.js  op-shift.js  op-slice.js  op-slow.js  op-stack.js  op-stretch.js  (+5 more)
public/: index-edit.html
tests/: base.js  test-cases.json  test-evaluator.js  test-harmony.js  test-operator.js  test-pattern.js  test-run-cases.js  test-sequence-operator.js  test-sequence-player.js  test-sequence.js  test-weaving.js
(+8 files in other folders)
